Submitting and cancelling a post

--- a/src/components/NewPost.module.css
+++ b/src/components/NewPost.module.css
@@ -46,6 +46,8 @@
   
   .actions button[type='button'] {
     background-color: transparent;
+    cursor: pointer;
+    
   }
   
   .actions button[type='button']:hover {
