--- a/src/components/MainHeader.module.css
+++ b/src/components/MainHeader.module.css
@@ -22,7 +22,7 @@
   align-items: center;
   gap: 0.5rem;
   padding: 0.75rem 1.5rem;
-  background-color: #a990fb;
+  background-color: #5bf180;
   color: #2a2630;
   border: none;
   border-radius: 4px;
@@ -32,5 +32,5 @@
 }
 
 .button:hover {
-  background-color: #8c6cf7;
+  background-color: #13e748;
 }
